--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "eslint": "^4.14.0",
     "jasmine": "^2.8.0",
     "nyc": "^11.4.1",
-    "protractor": "^5.x",
+    "protractor": "^5.4",
     "standard-version": "^4.2.0"
   },
   "config": {
