--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,19 @@ node_js:
   - "node"
 sudo: required
 dist: trusty
-before_install:
- - export CHROME_BIN=/usr/bin/google-chrome
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
- - sudo apt-get update
- - sudo apt-get install -y libappindicator1 fonts-liberation
- - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
- - sudo dpkg -i google-chrome*.deb
- - sudo apt-get install graphicsmagick
+addons:
+  firefox: latest
+  apt:
+    sources:
+     - google-chrome
+    packages:
+     - google-chrome-stable
+     - graphicsmagick
+
 before_script:
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm run setup
   - nohup bash -c "npm run server &> selenium-server.log &"
   - sleep 10
