--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "codecov": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.6.0",
